force-app/main/default/objects/Social_Media_Identifier_CA__c/Social_Media_Identifier_CA__c.object-meta.xml
<CustomObject>
    <label>Social Media Identifier CA</label>
    <nameField>
        <displayFormat>SMICA-{000000}</displayFormat>
        <label>Social Media Identifier to CA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Media Identifiers CAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>