force-app/main/default/objects/Social_Media_Identifier_CA__c/fields/CA__c.field-meta.xml
<CustomField>
    <fullName>CA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Social_Media_Identifiers_SAs</relationshipName>
    <type>Lookup</type>
</CustomField>