force-app/main/default/objects/Social_Media_Identifier_CA__c/fields/Client_Social_Media_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Client_Social_Media_Identifier__c</fullName>
    <label>Client Social Media Identifier</label>
    <referenceTo>Social_Media_Identifier__c</referenceTo>
    <relationshipName>Social_Media_Identifiers_CAs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>