force-app/main/default/objects/Social_Media_Identifier_CA__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bound</fullName>
                <default>true</default>
                <label>bound</label>
            </value>
            <value>
                <fullName>unbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>