force-app/main/default/objects/Social_Media_Identifier_CA__c/fields/TECH_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>TECH_ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Concatenation CA ID + Media Type + Social ID</description>
    <externalId>true</externalId>
    <label>TECH_ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>